# imgui_datagrid

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  build.sh  databrowser_config.json.example  imgui_datagrid.cpp  imgui_datagrid.hpp  platform.hpp
adapters/: adapter_concepts.hpp  adapter_kind.hpp  adapter_registry.cpp  adapter_registry.hpp  data_source.hpp  platform_detect.hpp  udf_provider.hpp
adapters/csv/: csv_adapter.cpp  csv_adapter.hpp
adapters/duckdb/: duckdb_adapter.cpp  duckdb_adapter.hpp
adapters/filesystem/: filesystem_adapter.cpp  filesystem_adapter.hpp  fluent_query.cpp  fluent_query.hpp
adapters/postgres/: postgres_adapter.cpp  postgres_adapter.hpp
adapters/query/: tabular_query.cpp  tabular_query.hpp
adapters/sqlite/: sqlite_adapter.cpp  sqlite_adapter.hpp
adapters/utils/: expected_utils.hpp  tabular_query.cpp  tabular_query.hpp  type_inferrer.cpp  type_inferrer.hpp  udf_provider.hpp
cmake/: patch_duckdb.py
compat/: move_only_function.hpp
examples/databrowser/: CMakeLists.txt  app.cpp  app.hpp  app_config.hpp  data_browser.cpp  data_browser.hpp  drag_drop.hpp  icons.hpp  image_cache.cpp  image_cache.hpp  main.cpp  navbar.hpp  responsive_layout.hpp  settings.cpp  settings.hpp  sokol_impl.cpp  stb_impl.cpp  theme.cpp  theme.hpp  utils.cpp  utils.hpp
examples/databrowser/inspector/: schema_inspector.cpp  schema_inspector.hpp
examples/databrowser/io/: drag_drop.hpp  file_io.hpp  image_cache.cpp  image_cache.hpp  platform.hpp  rfs.hpp
examples/databrowser/resources/shaders/gsl330/: rainbow.fs  rainbow_1.fs
examples/databrowser/resources/themes/: DawnBringer16Dark.json  DawnBringer16Light.json  DawnBringerDark.json  DawnBringerLight.json  EarthSUSE.json  EarthSUSEDark.json  Material.json  MaterialDark.json  MonaSpaces.json  MonoDark.json  MonoLight.json  Monokai.json  MonokaiDark.json  NeonSpaces.json
examples/databrowser/ui/: drag_drop_dialog.cpp  drag_drop_dialog.hpp  filetype_sniffer.hpp  hex_view.cpp  hex_view.hpp  icons.hpp  navbar.hpp  platform.hpp  responsive_layout.hpp  sql_editor.cpp  sql_editor.hpp  text_area.cpp  text_area.hpp  theme.cpp  theme.hpp  theme_customizer.cpp  theme_customizer.hpp
scripts/: strip_banners.py
tests/: CMakeLists.txt  test_adapter_registry.cpp  test_csv_adapter.cpp  test_filesystem_adapter.cpp  test_fluent_query.cpp  test_imgui_datagrid.cpp  test_sqlite_adapter.cpp  test_type_inferrer.cpp
